# gh-neopixel

./: .gitignore
arduino/: arduino.ino
python/: Dockerfile  ghneopixel.py  main.py  pyproject.toml
